basic calculator add, div, mult and sub operations work

--- a/style.css
+++ b/style.css
@@ -21,11 +21,16 @@
 }
 
 .screen {
+    display: flex;
+    padding: 1rem;
+    align-items: center;
+    justify-content: end;
     background:rgb(221, 221, 230);
     margin: 1.5rem;
     max-width: 100%;
     height: 80px;
     border-radius: 0.5rem;
+    font-size: 2rem;
 }
 .btn-container {
     display: flex;
