--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
     border-radius: 0.8rem;
     padding: 0.5rem;
   
+  
 }
 
 .screen {
@@ -35,7 +36,7 @@
 .btn-container {
     display: flex;
     flex-wrap: wrap;
-   justify-content: center;
+    justify-content: center;
     gap: 0.55rem;
     width: 100%;
     height: auto;
@@ -50,11 +51,30 @@
     
     
 }
-.btn.equal{
-    flex: 0.25;
-    background: rgb(204, 255, 204);
+.special-btns{
+    width: 100%;
+    display: flex;
+    gap: 0.5rem;
+   align-items: center;
+   justify-content: center;
+   padding: 0 1.5rem;
+ 
+  
    
+    
 }
+.backspace{
+    flex: 1;
+    background: rgb(255, 130, 130);
+    
+}
+
+.btn.equal {
+    flex:1;
+    background: rgb(204, 255, 204);
+  
+}
+
 .clear {
     background: rgb(255, 210, 126);
 }
